# linqia-takehome-cicd

./: .gitignore  Dockerfile  README.md  design.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
sample_app/: __main__.py  functions.py
tests/: conftest.py  test_functions.py  test_main.py
