[build-system]
requires = ["setuptools", "wheel"]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings --cov=sample_app --cov-report=xml --cov-report=term-missing --junitxml=junit.xml"
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
